--- a/.gitignore
+++ b/.gitignore
@@ -218,4 +218,9 @@ __pycache__/
 
 # Data
 data/raw/
+
+# Ignore all processed CSVs
 data/processed/*.csv
+
+# BUT allow the sample file
+!data/processed/sample_master_data.csv
